# ANLY503

./: README.md  environment.yml  install_packages.R  packages.csv  pyproject.toml
hws/: .gitignore  dashboard.Rmd  hw3.Rmd
hws/HW-5-ml1859/HW-5.1/: HW-5.1.ipynb  HW-5.1.py
hws/HW-5-ml1859/HW-5.2/: HW-5.2.qmd  elevation.tif
hws/HW-5-ml1859/HW-5.3/: shader.ipynb  shader.qmd
hws/hw1/: hw-1.1.html  hw-1.1.ipynb  hw-1.2.html  hw-1.2.rmd
labs/: lab1.R
labs/lab-6.2/: lab-6.2.ipynb
labs/lab1/: lab-1.1.rmd  lab1.ipynb
labs/lab1.1/: lab1.R
labs/lab1.2/: lab-1.2.html  lab-1.2.ipynb
labs/lab2.2/: airbnb.twb  anly503-r.twbx  lab-2.2.html  lab-2.2.ipynb  lab-2.2.qmd  mpg.twb  mpg.xlsx
labs/lab3.1/: PLOTLY-JS.html  SOLAR.html
labs/lab3.2/: lab-3.2-YOLO.py
labs/lab4.1/: lab-4.1.html
labs/lab4.2/: altair-data-727fb16419bb083758333837df7bd20d.json  lab-4.2_empty copy.ipynb  lab-4.2_empty.html  lab-4.2_empty.ipynb  lab-4.2_empty.qmd
labs/lab6.1/img/: plotly-0.html
labs/lab6.2/: lab-6.2.ipynb
lecs/3.13/W08-2023-plotly/.jupyter_cache/: global.db
lecs/3.13/W08-2023-plotly/.jupyter_cache/executed/cf93a079a740fababec2d5a2fa067bc6/: base.ipynb
lecs/3.13/W08-2023-plotly/.quarto/_freeze/slides-1/execute-results/: html.json
lecs/3.13/W08-2023-plotly/.quarto/_freeze/slides/execute-results/: html.json
lecs/3.13/W08-2023-plotly/.quarto/xref/: 3b977fef  5191f455  7a8d1bb2  INDEX  c883bed5
stylelib/: lab-1.2.mplstyle  mystyle.mplstyle
