[tool.poetry]
name = "anly503"
version = "0.1.0"
description = ""
authors = ["Abhijit Dasgupta <adasgupta@araastat.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
dask = "^2022.1.0"
scikit-learn = "^1.0.2"
statsmodels = "^0.13.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
bokeh = "^2.4.2"
altair = "^4.2.0"
holoviews = "^1.14.7"
datashader = "^0.13.0"
geopandas = "^0.10.2"
networkx = "^2.6.3"
yellowbrick = "^1.3.post1"
pyarrow = "^6.0.1"
pyreadr = "^0.4.4"
umap-learn = "^0.5.2"
wbdata = "^0.3.0"
rdatasets = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
